Tue Mar 10 14:24:09 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkselection.c (gtk_selection_clear): Make the return
	  result reflect whether the clear event was out of data.

	* gtk/gtkeditable.c: Ignore out of date selection clear
	  events.

	* gtk/gtkentry.c gtk/gtktext.c: Don't synthesize releases
	  on [2/3]BUTTON presses, since we get the normal click as well.

	  Claim the selection when selecting words/lines.

Tue Mar 10 13:34:29 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkrange.c (gtk_range_default_[vh]trough_click): 
	  Take forward/back step arrows into account when computing
	  position for middle button clicks.

	* gtk/gtktext.c gtk/gtkentry.c:
	  - Fixes for deleting characters (don't subtract guints and get
	    negative numbers!)
	  - Reset cursor_virtual_x when moving by words and lines
	  - Extra sanity checks
	  - Fix to gtk_text_get_chars 
	         (from Tony Gale <gale@daedalus.dera.gov.uk>)

Mon Mar  9 21:21:19 PST 1998 Shawn T. Amundson <amundson@gimp.org>

	* Released 0.99.5

Mon Mar  9 23:24:42 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk/gtkclist.c (gtk_clist_get_selection_info): Export
	functionality.

Tue Mar 10 05:42:34 1998  Tim Janik  <timj@gimp.org>

        * configure.in: Bumped version number to 0.99.5.

Tue Mar 10 05:30:05 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkrange.h:
	* gtk/gtkrange.c:
 	changed gtk_range_trough_click() to take an additional jump_perc arg,
	class method and callers changed.

	* gdk/gdk.c (gdk_ic_destroy): applied gtk-gronlund-980309-1.patch.gz
	which fixes a memory leak.

Mon Mar  9 20:38:15 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.c gtk/gtkeditable.c gtk/gtkspinbutton.c: 
	  Moved "activate" to editable class. Made the vfuncs in 
	  gtkeditable just vfuncs not signals.

	* gtkentry.[ch] gtktext.[ch]: Made behavior when pressing
	  multiple buttons at once more rational.

	* gtkentry.c gtktext.c: Unified and rationalized key
	  bindings. (Now are basically emacs+CUA)
	